Try cleaning out migrations pyc files

--- a/tox.ini
+++ b/tox.ini
@@ -130,6 +130,7 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.3.0
+    rm -f django_celery_beat/migrations/*.pyc
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
@@ -145,13 +146,13 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
-    git clean -n
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
     # first install our starting version
     git fetch --tags
     git checkout v1.4.0
+    rm -f django_celery_beat/migrations/*.pyc
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
