clean out rogue migration pyc files on all tests

--- a/tox.ini
+++ b/tox.ini
@@ -87,6 +87,7 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.1.1
+    rm -f django_celery_beat/migrations/*.pyc
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
@@ -108,6 +109,7 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.2.0
+    rm -f django_celery_beat/migrations/*.pyc
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
@@ -123,7 +125,6 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
-    git clean -n
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
