Try adding sleeps to fix the migration timing issue

--- a/tox.ini
+++ b/tox.ini
@@ -87,12 +87,13 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.1.1
-    rm -f django_celery_beat/migrations/*.pyc
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
+    sleep 2
     python manage.py migrate django_celery_beat 0001
+    sleep 2
     python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat120]
@@ -109,12 +110,13 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.2.0
-    rm -f django_celery_beat/migrations/*.pyc
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
+    sleep 2
     python manage.py migrate django_celery_beat 0001
+    sleep 2
     python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat130]
@@ -131,12 +133,13 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.3.0
-    rm -f django_celery_beat/migrations/*.pyc
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat --verbosity 2
+    sleep 2
     python manage.py migrate django_celery_beat 0001 --verbosity 2
+    sleep 2
     python manage.py migrate django_celery_beat --verbosity 2
 
 [testenv:upgradebeat140]
@@ -153,12 +156,13 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.4.0
-    rm -f django_celery_beat/migrations/*.pyc
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat --verbosity 2
+    sleep 2
     python manage.py migrate django_celery_beat 0001 --verbosity 2
+    sleep 2
     python manage.py migrate django_celery_beat --verbosity 2
 
 [testenv:apicheck]
