--- a/tox.ini
+++ b/tox.ini
@@ -91,9 +91,7 @@ commands =
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
-    sleep 2
     python manage.py migrate django_celery_beat 0001
-    sleep 2
     python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat120]
@@ -114,9 +112,7 @@ commands =
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
-    sleep 2
     python manage.py migrate django_celery_beat 0001
-    sleep 2
     python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat130]
@@ -133,14 +129,15 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.3.0
+    # refresh migrations directory in case extra stuff is there
+    rm -f django_celery_beat/migrations/*
+    git checkout django_celery_beat/migrations
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
-    python manage.py migrate django_celery_beat --verbosity 2
-    sleep 2
-    python manage.py migrate django_celery_beat 0001 --verbosity 2
-    sleep 2
-    python manage.py migrate django_celery_beat --verbosity 2
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat140]
 basepython = python2.7
@@ -156,14 +153,15 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.4.0
+    # refresh migrations directory in case extra stuff is there
+    rm -f django_celery_beat/migrations/*
+    git checkout django_celery_beat/migrations
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
-    python manage.py migrate django_celery_beat --verbosity 2
-    sleep 2
-    python manage.py migrate django_celery_beat 0001 --verbosity 2
-    sleep 2
-    python manage.py migrate django_celery_beat --verbosity 2
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
 
 [testenv:apicheck]
 basepython = python3.5
