Try cleaning up migrations folder both times we checkout a branch

--- a/tox.ini
+++ b/tox.ini
@@ -129,12 +129,15 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.3.0
-    # refresh migrations directory in case extra stuff is there
-    rm -f django_celery_beat/migrations/*
+    rm -rf django_celery_beat/migrations/*
     git checkout django_celery_beat/migrations
+    # run the migration for the older version
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
+    rm -rf django_celery_beat/migrations/*
+    git checkout django_celery_beat/migrations
+    # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
@@ -150,15 +153,18 @@ commands =
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
-    # first install our starting version
+    # first install our starting version and clean up
     git fetch --tags
     git checkout v1.4.0
-    # refresh migrations directory in case extra stuff is there
-    rm -f django_celery_beat/migrations/*
+    rm -rf django_celery_beat/migrations/*
     git checkout django_celery_beat/migrations
+    # run the migration for the older version
     python manage.py migrate django_celery_beat
-    # now return to previous hash and ensure all migrations continue to work
+    # now return to previous hash and clean up again
     bash -c "cat commit.hash | git checkout -"
+    rm -rf django_celery_beat/migrations/*
+    git checkout django_celery_beat/migrations
+    # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
