Try upgrade tests running sequentially via depends chain

--- a/tox.ini
+++ b/tox.ini
@@ -75,6 +75,7 @@ commands =
 
 [testenv:upgradebeat111]
 basepython = python2.7
+depends = python37,py27,pypy,py35
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -96,6 +97,7 @@ commands =
 
 [testenv:upgradebeat120]
 basepython = python2.7
+depends = upgradebeat111
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -117,6 +119,7 @@ commands =
 
 [testenv:upgradebeat130]
 basepython = python2.7
+depends = upgradebeat120
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -129,14 +132,12 @@ commands =
     # first install our starting version
     git fetch --tags
     git checkout v1.3.0
-    rm -rf django_celery_beat/migrations/*
+    rm -f django_celery_beat/migrations/*
     git checkout django_celery_beat/migrations
     # run the migration for the older version
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
-    rm -rf django_celery_beat/migrations/*
-    git checkout django_celery_beat/migrations
     # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
@@ -144,6 +145,7 @@ commands =
 
 [testenv:upgradebeat140]
 basepython = python2.7
+depends = upgradebeat130
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -155,15 +157,13 @@ commands =
     cat commit.hash
     # first install our starting version and clean up
     git fetch --tags
-    git checkout v1.4.0
-    rm -rf django_celery_beat/migrations/*
+    git checkout v1.4.0    
+    rm -f django_celery_beat/migrations/*
     git checkout django_celery_beat/migrations
     # run the migration for the older version
     python manage.py migrate django_celery_beat
     # now return to previous hash and clean up again
     bash -c "cat commit.hash | git checkout -"
-    rm -rf django_celery_beat/migrations/*
-    git checkout django_celery_beat/migrations
     # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
