--- a/tox.ini
+++ b/tox.ini
@@ -75,7 +75,7 @@ commands =
 
 [testenv:upgradebeat111]
 basepython = python2.7
-depends = python37,py27,pypy,py35
+envdir = {toxinidir}/.env/upgradebeat111
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -97,7 +97,7 @@ commands =
 
 [testenv:upgradebeat120]
 basepython = python2.7
-depends = upgradebeat111
+envdir = {toxinidir}/.env/upgradebeat120
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -119,7 +119,7 @@ commands =
 
 [testenv:upgradebeat130]
 basepython = python2.7
-depends = upgradebeat120
+envdir = {toxinidir}/.env/upgradebeat130
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -145,7 +145,7 @@ commands =
 
 [testenv:upgradebeat140]
 basepython = python2.7
-depends = upgradebeat130
+envdir = {toxinidir}/.env/upgradebeat140
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -157,7 +157,7 @@ commands =
     cat commit.hash
     # first install our starting version and clean up
     git fetch --tags
-    git checkout v1.4.0    
+    git checkout v1.4.0
     rm -f django_celery_beat/migrations/*
     git checkout django_celery_beat/migrations
     # run the migration for the older version
