--- a/tox.ini
+++ b/tox.ini
@@ -82,6 +82,11 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    # create copy of git clone and stabaize it
+    mkdir gitbackup111
+    bash -c 'cp -r `ls -A | grep -v "gitbackup111"` gitbackup111'
+    cp -r .git gitbackup111/
+    cd gitbackup111
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
@@ -104,6 +109,11 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    # create copy of git clone and stabaize it
+    mkdir gitbackup120
+    bash -c 'cp -r `ls -A | grep -v "gitbackup120"` gitbackup120/'
+    cp -r .git gitbackup120/
+    cd gitbackup120
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
@@ -126,6 +136,11 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    # create copy of git clone and stabaize it
+    mkdir gitbackup130
+    bash -c 'cp -r `ls -A | grep -v "gitbackup130"` gitbackup130/'
+    cp -r .git gitbackup130/
+    cd gitbackup130
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
@@ -152,6 +167,11 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    # create copy of git clone and stabaize it
+    mkdir gitbackup140
+    bash -c 'cp -r `ls -A | grep -v "gitbackup140"` gitbackup140/'
+    cp -r .git gitbackup140/
+    cd gitbackup140
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
