sudo for permission error when copying .git directory

--- a/tox.ini
+++ b/tox.ini
@@ -85,7 +85,7 @@ commands =
     # create copy of git clone and stabaize it
     mkdir gitbackup111
     bash -c 'cp -r `ls -A | grep -v "gitbackup111"` gitbackup111'
-    cp -r .git gitbackup111/
+    sudo cp -r .git gitbackup111/
     cd gitbackup111
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
@@ -112,7 +112,7 @@ commands =
     # create copy of git clone and stabaize it
     mkdir gitbackup120
     bash -c 'cp -r `ls -A | grep -v "gitbackup120"` gitbackup120/'
-    cp -r .git gitbackup120/
+    sudo cp -r .git gitbackup120/
     cd gitbackup120
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
@@ -139,7 +139,7 @@ commands =
     # create copy of git clone and stabaize it
     mkdir gitbackup130
     bash -c 'cp -r `ls -A | grep -v "gitbackup130"` gitbackup130/'
-    cp -r .git gitbackup130/
+    sudo cp -r .git gitbackup130/
     cd gitbackup130
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
@@ -170,7 +170,7 @@ commands =
     # create copy of git clone and stabaize it
     mkdir gitbackup140
     bash -c 'cp -r `ls -A | grep -v "gitbackup140"` gitbackup140/'
-    cp -r .git gitbackup140/
+    sudo cp -r .git gitbackup140/
     cd gitbackup140
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
