--- a/tox.ini
+++ b/tox.ini
@@ -82,11 +82,6 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
-    # create copy of git clone and stabaize it
-    mkdir gitbackup111
-    bash -c 'cp -r `ls -A | grep -v "gitbackup111"` gitbackup111'
-    sudo cp -r .git gitbackup111/
-    cd gitbackup111
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
@@ -109,11 +104,6 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
-    # create copy of git clone and stabaize it
-    mkdir gitbackup120
-    bash -c 'cp -r `ls -A | grep -v "gitbackup120"` gitbackup120/'
-    sudo cp -r .git gitbackup120/
-    cd gitbackup120
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
@@ -136,11 +126,6 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
-    # create copy of git clone and stabaize it
-    mkdir gitbackup130
-    bash -c 'cp -r `ls -A | grep -v "gitbackup130"` gitbackup130/'
-    sudo cp -r .git gitbackup130/
-    cd gitbackup130
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
@@ -167,27 +152,25 @@ commands =
     pip install "django>=1.11.17,<2.0"
     pip install "celery<5.0.0"
     pip list
+    git fetch --tags
     # create copy of git clone and stabaize it
     mkdir gitbackup140
     bash -c 'cp -r `ls -A | grep -v "gitbackup140"` gitbackup140/'
     sudo cp -r .git gitbackup140/
-    cd gitbackup140
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
     # first install our starting version and clean up
-    git fetch --tags
-    git checkout v1.4.0
-    rm -f django_celery_beat/migrations/*
-    git checkout django_celery_beat/migrations
+    git --git-dir=/gitbackup140/.git --work-tree=/gitbackup140 checkout v1.4.0
     # run the migration for the older version
-    python manage.py migrate django_celery_beat
+    python -c 'import os; os.chdir("gitbackup140"); os.system("python manage.py migrate django_celery_beat");'
+    
     # now return to previous hash and clean up again
-    bash -c "cat commit.hash | git checkout -"
+    bash -c "cat commit.hash | git --git-dir=/gitbackup140/.git --work-tree=/gitbackup140 checkout -"
     # now make sure migrations still work backward and forward
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
+    python -c 'import os; os.chdir("gitbackup140"); os.system("python manage.py migrate django_celery_beat");'
+    python -c 'import os; os.chdir("gitbackup140"); os.system("python manage.py migrate django_celery_beat 0001");'
+    python -c 'import os; os.chdir("gitbackup140"); os.system("python manage.py migrate django_celery_beat");'
 
 [testenv:apicheck]
 basepython = python3.5
