use the right path to the temp git dir

--- a/tox.ini
+++ b/tox.ini
@@ -161,12 +161,12 @@ commands =
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
     # first install our starting version and clean up
-    git --git-dir=/gitbackup140/.git --work-tree=/gitbackup140 checkout v1.4.0
+    git --git-dir=./gitbackup140/.git --work-tree=./gitbackup140 checkout v1.4.0
     # run the migration for the older version
     python -c 'import os; os.chdir("gitbackup140"); os.system("python manage.py migrate django_celery_beat");'
     
     # now return to previous hash and clean up again
-    bash -c "cat commit.hash | git --git-dir=/gitbackup140/.git --work-tree=/gitbackup140 checkout -"
+    bash -c "cat commit.hash | git --git-dir=./gitbackup140/.git --work-tree=./gitbackup140 checkout -"
     # now make sure migrations still work backward and forward
     python -c 'import os; os.chdir("gitbackup140"); os.system("python manage.py migrate django_celery_beat");'
     python -c 'import os; os.chdir("gitbackup140"); os.system("python manage.py migrate django_celery_beat 0001");'
