Keep file permissions when copying since we are using sudo

--- a/tox.ini
+++ b/tox.ini
@@ -156,7 +156,7 @@ commands =
     # create copy of git clone and stabaize it
     mkdir gitbackup140
     bash -c 'cp -r `ls -A | grep -v "gitbackup140"` gitbackup140/'
-    sudo cp -r .git gitbackup140/
+    sudo cp -rp .git gitbackup140/
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     cat commit.hash
