--- a/tox.ini
+++ b/tox.ini
@@ -148,31 +148,10 @@ basepython = python2.7
 envdir = {toxinidir}/.env/upgradebeat140
 whitelist_externals = *
 setenv =
+    GIT_TAG = v1.4.0
     GIT_TMP = gitbackup140
 commands =
-    # must use older versions for starting with older celery-beat
-    pip install "django>=1.11.17,<2.0"
-    pip install "celery<5.0.0"
-    pip list
-    git fetch --tags
-    # create copy of our git clone in a temp dir
-    mkdir {env:GIT_TMP}
-    bash -c 'cp -r `ls -A | grep -v "{env:GIT_TMP}"` {env:GIT_TMP}/'
-    sudo cp -rp .git {env:GIT_TMP}/
-    # save current hash so we can come back to it
-    bash -c "git rev-parse HEAD > {env:GIT_TMP}/commit.hash"
-    cat {env:GIT_TMP}/commit.hash
-    # first install our starting version and clean up
-    git --git-dir=./{env:GIT_TMP}/.git --work-tree=./{env:GIT_TMP} checkout v1.4.0
-    # run the migration for the older version
-    python -c 'import os; os.chdir("{env:GIT_TMP}"); os.system("python manage.py migrate django_celery_beat");'
-    # now return to previous hash and clean up again
-    bash -c "cat {env:GIT_TMP}/commit.hash | git --git-dir=./{env:GIT_TMP}/.git --work-tree=./{env:GIT_TMP} checkout -"
-    # now make sure migrations still work backward and forward
-    python -c 'import os; os.chdir("{env:GIT_TMP}"); os.system("python manage.py migrate django_celery_beat");'
-    python -c 'import os; os.chdir("{env:GIT_TMP}"); os.system("python manage.py migrate django_celery_beat 0001");'
-    python -c 'import os; os.chdir("{env:GIT_TMP}"); os.system("python manage.py migrate django_celery_beat");'
-    rm -rf {env:GIT_TMP}
+    bash -c "./upgrade_test.sh {env:GIT_TMP} {env:GIT_TAG}"
 
 [testenv:apicheck]
 basepython = python3.5
