Use new shell script for all upgrade tests

--- a/tox.ini
+++ b/tox.ini
@@ -77,75 +77,33 @@ commands =
 basepython = python2.7
 envdir = {toxinidir}/.env/upgradebeat111
 whitelist_externals = *
+setenv =
+    GIT_TAG = v1.1.1
+    GIT_TMP = gitbackup111
 commands =
-    # must use older versions for starting with older celery-beat
-    pip install "django>=1.11.17,<2.0"
-    pip install "celery<5.0.0"
-    pip list
-    # save current hash so we can come back to it
-    bash -c "git rev-parse HEAD > commit.hash"
-    cat commit.hash
-    # first install our starting version
-    git fetch --tags
-    git checkout v1.1.1
-    python manage.py migrate django_celery_beat
-    # now return to previous hash and ensure all migrations continue to work
-    bash -c "cat commit.hash | git checkout -"
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
+    bash -c "./upgrade_test.sh {env:GIT_TMP} {env:GIT_TAG}"
 
 [testenv:upgradebeat120]
 basepython = python2.7
 envdir = {toxinidir}/.env/upgradebeat120
 whitelist_externals = *
+setenv =
+    GIT_TAG = v1.2.0
+    GIT_TMP = gitbackup120
 commands =
-    # must use older versions for starting with older celery-beat
-    pip install "django>=1.11.17,<2.0"
-    pip install "celery<5.0.0"
-    pip list
-    # save current hash so we can come back to it
-    bash -c "git rev-parse HEAD > commit.hash"
-    cat commit.hash
-    # first install our starting version
-    git fetch --tags
-    git checkout v1.2.0
-    python manage.py migrate django_celery_beat
-    # now return to previous hash and ensure all migrations continue to work
-    bash -c "cat commit.hash | git checkout -"
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
+    bash -c "./upgrade_test.sh {env:GIT_TMP} {env:GIT_TAG}"
 
 [testenv:upgradebeat130]
 basepython = python2.7
-envdir = {toxinidir}/.env/upgradebeat130
 whitelist_externals = *
+setenv =
+    GIT_TAG = v1.3.0
+    GIT_TMP = gitbackup130
 commands =
-    # must use older versions for starting with older celery-beat
-    pip install "django>=1.11.17,<2.0"
-    pip install "celery<5.0.0"
-    pip list
-    # save current hash so we can come back to it
-    bash -c "git rev-parse HEAD > commit.hash"
-    cat commit.hash
-    # first install our starting version
-    git fetch --tags
-    git checkout v1.3.0
-    rm -f django_celery_beat/migrations/*
-    git checkout django_celery_beat/migrations
-    # run the migration for the older version
-    python manage.py migrate django_celery_beat
-    # now return to previous hash and ensure all migrations continue to work
-    bash -c "cat commit.hash | git checkout -"
-    # now make sure migrations still work backward and forward
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
+    bash -c "./upgrade_test.sh {env:GIT_TMP} {env:GIT_TAG}"
 
 [testenv:upgradebeat140]
 basepython = python2.7
-envdir = {toxinidir}/.env/upgradebeat140
 whitelist_externals = *
 setenv =
     GIT_TAG = v1.4.0
