Move some things, add envdir back to every upgrade test.

--- a/tox.ini
+++ b/tox.ini
@@ -81,6 +81,9 @@ setenv =
     GIT_TAG = v1.1.1
     GIT_TMP = gitbackup111
 commands =
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
     bash -c "./upgrade_test.sh {env:GIT_TMP} {env:GIT_TAG}"
 
 [testenv:upgradebeat120]
@@ -91,24 +94,35 @@ setenv =
     GIT_TAG = v1.2.0
     GIT_TMP = gitbackup120
 commands =
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
     bash -c "./upgrade_test.sh {env:GIT_TMP} {env:GIT_TAG}"
 
 [testenv:upgradebeat130]
 basepython = python2.7
 whitelist_externals = *
+envdir = {toxinidir}/.env/upgradebeat130
 setenv =
     GIT_TAG = v1.3.0
     GIT_TMP = gitbackup130
 commands =
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
     bash -c "./upgrade_test.sh {env:GIT_TMP} {env:GIT_TAG}"
 
 [testenv:upgradebeat140]
 basepython = python2.7
 whitelist_externals = *
+envdir = {toxinidir}/.env/upgradebeat140
 setenv =
     GIT_TAG = v1.4.0
     GIT_TMP = gitbackup140
 commands =
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
     bash -c "./upgrade_test.sh {env:GIT_TMP} {env:GIT_TAG}"
 
 [testenv:apicheck]
