remove all debugging code, try recent django/python with recent builds.

--- a/tox.ini
+++ b/tox.ini
@@ -75,8 +75,9 @@ commands =
 
 [testenv:upgradebeat111]
 basepython = python2.7
-envdir = {toxinidir}/.env/upgradebeat111
 whitelist_externals = *
+setenv =
+    GIT_TAG = v1.1.1
 commands =
     # must use older versions for starting with older celery-beat
     pip install "django>=1.11.17,<2.0"
@@ -86,7 +87,7 @@ commands =
     bash -c "git rev-parse HEAD > commit.hash"
     # first install our starting version
     git fetch --tags
-    git checkout v1.1.1
+    git checkout {env:GIT_TAG}
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
@@ -96,8 +97,9 @@ commands =
 
 [testenv:upgradebeat120]
 basepython = python2.7
-envdir = {toxinidir}/.env/upgradebeat120
 whitelist_externals = *
+setenv =
+    GIT_TAG = v1.2.0
 commands =
     # must use older versions for starting with older celery-beat
     pip install "django>=1.11.17,<2.0"
@@ -107,7 +109,7 @@ commands =
     bash -c "git rev-parse HEAD > commit.hash"
     # first install our starting version
     git fetch --tags
-    git checkout v1.2.0
+    git checkout {env:GIT_TAG}
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
@@ -116,8 +118,9 @@ commands =
     python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat130]
-basepython = python2.7
-envdir = {toxinidir}/.env/upgradebeat130
+basepython = python3.5
+setenv =
+    GIT_TAG = v1.3.0
 whitelist_externals = *
 commands =
     # must use older versions for starting with older celery-beat
@@ -128,21 +131,19 @@ commands =
     bash -c "git rev-parse HEAD > commit.hash"
     # first install our starting version
     git fetch --tags
-    git checkout v1.3.0
-    rm -f django_celery_beat/migrations/*
-    git checkout django_celery_beat/migrations
+    git checkout {env:GIT_TAG}
     # run the migration for the older version
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
+    pip install "django>=2.0.0"
     # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat140]
-basepython = python2.7
-envdir = {toxinidir}/.env/upgradebeat140
+basepython = python3.5
 whitelist_externals = *
 setenv =
     GIT_TAG = v1.4.0
@@ -160,6 +161,7 @@ commands =
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
+    pip install "django>=2.0.0"
     # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
