--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
-dist: xenial
 sudo: false
 cache: false
+addons:
+  apt_packages:
+    - binutils
+    - sqlite3
 python:
   - 2.7
   - 3.5
@@ -17,8 +20,8 @@ matrix:
     - {python: 3.7, env: TOXENV=python37, dist: xenial, sudo: true}
     - { python: 2.7, env: TOXENV=upgradebeat111 }
     - { python: 2.7, env: TOXENV=upgradebeat120 }
-    - { python: 2.7, env: TOXENV=upgradebeat130 }
-    - { python: 2.7, env: TOXENV=upgradebeat140 }
+    - { python: 3.5, env: TOXENV=upgradebeat130 }
+    - { python: 3.5, env: TOXENV=upgradebeat140 }
     - { python: 3.5, env: TOXENV=flake8 }
     - { python: 2.7, env: TOXENV=flakeplus }
     - { python: 3.5, env: TOXENV=pydocstyle }
