--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: python
 sudo: false
+dist: xenial
 cache: false
 before_install:
   - sudo apt-get install -y --only-upgrade sqlite
+  - sudo apt-get install -y --only-upgrade erlang
+  - sudo apt-get install -y --only-upgrade erlang-nox
+  - sudo apt-get install -y --only-upgrade rabbitmq-server
 addons:
   apt:
     update: true
