--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
 envlist =
     py27-django{111}
-    py35-django{111,20}
-    py37-django{111,20}
+    py35-django{111,20,21,22}
+    py36-django{111,20,21,22}
+    py37-django{111,20,21,22}
     pypy-django{111}
+    pypy35-django{111,20,21,22}
 
     flake8
     flakeplus
@@ -26,14 +28,15 @@ deps=
 
     cov: -r{toxinidir}/requirements/test-django111.txt
 
-    django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
+    django20: -r{toxinidir}/requirements/test-django20.txt
+    django21: django>=2.1<2.2
     django22: -r{toxinidir}/requirements/test-django22.txt
 
     py{27,py}: -r{toxinidir}/requirements/python2.txt
-    py{35,37}: -r{toxinidir}/requirements/python3.txt
+    py{35,36,37,py35}: -r{toxinidir}/requirements/python3.txt
 
-    py{27,35,37,py},cov: ephem
+    py{27,35,36,37,py,py35},cov: ephem
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
@@ -42,36 +45,6 @@ recreate = False
 commands =
     pip list
     py.test -xv
-    # ensure we can migrate up, back, and up again
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
-
-[testenv:python37]
-basepython = python3.7
-whitelist_externals = *
-commands =
-    # for ubutu xenial we must fix erlang for rabbitmq-server to work
-    sudo apt install -y wget
-    wget http://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
-    sudo apt-key add erlang_solutions.asc
-    sudo apt update
-    sudo apt install -y erlang
-    sudo apt install -y erlang-nox
-    sudo apt install -y rabbitmq-server
-    sudo /etc/init.d/rabbitmq-server start
-    sudo /etc/init.d/rabbitmq-server status
-
-    pip install ephem
-    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
-    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
-
-    pip list
-    py.test -xv
-    # ensure we can migrate up, back, and up again
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat111]
 basepython = python2.7
