--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 envlist =
     py27-django{111}
-    py35-django{111,20}
-    py37-django{111,20}
+    py35-django{111,20,21,22}
+    py36-django{111,20,21,22}
+    py37-django{111,20,21,22}
     pypy-django{111}
-
+    pypy3-django{111,20,21,22}
     flake8
     flakeplus
     apicheck
@@ -26,14 +27,13 @@ deps=
 
     cov: -r{toxinidir}/requirements/test-django111.txt
 
-    django20: -r{toxinidir}/requirements/test-django20.txt
     django111: -r{toxinidir}/requirements/test-django111.txt
+    django20: -r{toxinidir}/requirements/test-django20.txt
+    django21: django>=2.1<2.2
     django22: -r{toxinidir}/requirements/test-django22.txt
 
     py{27,py}: -r{toxinidir}/requirements/python2.txt
-    py{35,37}: -r{toxinidir}/requirements/python3.txt
-
-    py{27,35,37,py},cov: ephem
+    py{35,36,37,py3}: -r{toxinidir}/requirements/python3.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
@@ -42,33 +42,97 @@ recreate = False
 commands =
     pip list
     py.test -xv
-    # ensure we can migrate up, back, and up again
+
+[testenv:upgradebeat111]
+basepython = python2.7
+whitelist_externals = *
+setenv =
+    GIT_TAG = v1.1.1
+commands =
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
+    # save current hash so we can come back to it
+    bash -c "git rev-parse HEAD > commit.hash"
+    # first install our starting version
+    git fetch --tags
+    git checkout {env:GIT_TAG}
+    python manage.py migrate django_celery_beat
+    # now return to previous hash and ensure all migrations continue to work
+    bash -c "cat commit.hash | git checkout -"
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
 
-[testenv:python37]
-basepython = python3.7
+[testenv:upgradebeat120]
+basepython = python2.7
+whitelist_externals = *
+setenv =
+    GIT_TAG = v1.2.0
+commands =
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
+    # save current hash so we can come back to it
+    bash -c "git rev-parse HEAD > commit.hash"
+    # first install our starting version
+    git fetch --tags
+    git checkout {env:GIT_TAG}
+    python manage.py migrate django_celery_beat
+    # now return to previous hash and ensure all migrations continue to work
+    bash -c "cat commit.hash | git checkout -"
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
+
+[testenv:upgradebeat130]
+basepython = python3.5
+setenv =
+    GIT_TAG = v1.3.0
 whitelist_externals = *
 commands =
-    # for ubutu xenial we must fix erlang for rabbitmq-server to work
-    sudo apt install -y wget
-    wget http://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
-    sudo apt-key add erlang_solutions.asc
-    sudo apt update
-    sudo apt install -y erlang
-    sudo apt install -y erlang-nox
-    sudo apt install -y rabbitmq-server
-    sudo /etc/init.d/rabbitmq-server start
-    sudo /etc/init.d/rabbitmq-server status
-
-    pip install ephem
-    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
-    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
-
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
     pip list
-    py.test -xv
-    # ensure we can migrate up, back, and up again
+    # save current hash so we can come back to it
+    bash -c "git rev-parse HEAD > commit.hash"
+    # first install our starting version
+    git fetch --tags
+    git checkout {env:GIT_TAG}
+    # run the migration for the older version
+    python manage.py migrate django_celery_beat
+    # now return to previous hash and ensure all migrations continue to work
+    bash -c "cat commit.hash | git checkout -"
+    pip install "django>=2.0.0"
+    # now make sure migrations still work backward and forward
+    python manage.py migrate django_celery_beat
+    python manage.py migrate django_celery_beat 0001
+    python manage.py migrate django_celery_beat
+
+[testenv:upgradebeat140]
+basepython = python3.5
+whitelist_externals = *
+setenv =
+    GIT_TAG = v1.4.0
+commands =
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "celery<5.0.0"
+    pip list
+    # save current hash so we can come back to it
+    bash -c "git rev-parse HEAD > commit.hash"
+    # first install our starting version
+    git fetch --tags
+    git checkout {env:GIT_TAG}
+    # run the migration for the older version
+    python manage.py migrate django_celery_beat
+    # now return to previous hash and ensure all migrations continue to work
+    bash -c "cat commit.hash | git checkout -"
+    pip install "django>=2.0.0"
+    # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
