Drop support for Django <2.2 and Python 2.

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
 envlist =
-    py27-django{111}
-    py35-django{111,21,22}
-    py36-django{111,21,22}
-    py37-django{111,21,22}
-    pypy-django{111}
-    pypy3-django{111,21,22}
+    py35-django{22,30}
+    py36-django{22,30}
+    py37-django{22,30}
+    py38-django{22,30}
+    pypy3-django{22,30}
     flake8
     flakeplus
     apicheck
@@ -15,9 +14,8 @@ envlist =
 
 [travis:env]
 DJANGO =
-    1.11: django111
-    2.1: django21
     2.2: django22
+    3.0: django30
 
 [testenv]
 deps=
@@ -25,14 +23,12 @@ deps=
     -r{toxinidir}/requirements/test.txt
     -r{toxinidir}/requirements/test-ci.txt
 
-    cov: -r{toxinidir}/requirements/test-django111.txt
+    cov: -r{toxinidir}/requirements/test-django.txt
 
-    django111: -r{toxinidir}/requirements/test-django111.txt
-    django21: django>=2.1,<2.2
     django22: -r{toxinidir}/requirements/test-django22.txt
+    django30: -r{toxinidir}/requirements/test-django.txt
 
-    py{27,py}: -r{toxinidir}/requirements/python2.txt
-    py{35,36,37,py3}: -r{toxinidir}/requirements/python3.txt
+    py{35,36,37,38,py3}: -r{toxinidir}/requirements/python3.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
@@ -42,131 +38,85 @@ commands =
     pip list
     py.test -xv
 
-[testenv:upgradebeat111]
-basepython = python2.7
-whitelist_externals = *
-setenv =
-    GIT_TAG = v1.1.1
-commands =
-    # must use older versions for starting with older celery-beat
-    pip install "django>=1.11.17,<2.0"
-    pip install "celery<5.0.0"
-    pip list
-    # save current hash so we can come back to it
-    bash -c "git rev-parse HEAD > commit.hash"
-    # first install our starting version
-    git fetch --tags
-    git checkout {env:GIT_TAG}
-    python manage.py migrate django_celery_beat
-    # now return to previous hash and ensure all migrations continue to work
-    bash -c "cat commit.hash | git checkout -"
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
-
-[testenv:upgradebeat120]
-basepython = python2.7
-whitelist_externals = *
-setenv =
-    GIT_TAG = v1.2.0
-commands =
-    # must use older versions for starting with older celery-beat
-    pip install "django>=1.11.17,<2.0"
-    pip install "celery<5.0.0"
-    pip list
-    # save current hash so we can come back to it
-    bash -c "git rev-parse HEAD > commit.hash"
-    # first install our starting version
-    git fetch --tags
-    git checkout {env:GIT_TAG}
-    python manage.py migrate django_celery_beat
-    # now return to previous hash and ensure all migrations continue to work
-    bash -c "cat commit.hash | git checkout -"
-    python manage.py migrate django_celery_beat
-    python manage.py migrate django_celery_beat 0001
-    python manage.py migrate django_celery_beat
-
 [testenv:upgradebeat130]
-basepython = python3.5
+basepython = python3.6
 setenv =
     GIT_TAG = v1.3.0
 whitelist_externals = *
 commands =
-    # must use older versions for starting with older celery-beat
-    pip install "django>=1.11.17,<2.0"
-    pip install "celery<5.0.0"
-    pip list
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     # first install our starting version
     git fetch --tags
     git checkout {env:GIT_TAG}
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "django-timezone-field<4.0"
+    pip install "celery<5.0.0"
+    pip list
     # run the migration for the older version
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
-    pip install "django>=2.0.0"
+    pip install "django>=3.0,<4.0"
+    pip install "django-timezone-field>=4.0,<5.0"
     # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
 
 [testenv:upgradebeat140]
-basepython = python3.5
+basepython = python3.6
 whitelist_externals = *
 setenv =
     GIT_TAG = v1.4.0
 commands =
-    # must use older versions for starting with older celery-beat
-    pip install "django>=1.11.17,<2.0"
-    pip install "celery<5.0.0"
-    pip list
     # save current hash so we can come back to it
     bash -c "git rev-parse HEAD > commit.hash"
     # first install our starting version
     git fetch --tags
     git checkout {env:GIT_TAG}
+    # must use older versions for starting with older celery-beat
+    pip install "django>=1.11.17,<2.0"
+    pip install "django-timezone-field<4.0"
+    pip install "celery<5.0.0"
+    pip list
     # run the migration for the older version
     python manage.py migrate django_celery_beat
     # now return to previous hash and ensure all migrations continue to work
     bash -c "cat commit.hash | git checkout -"
-    pip install "django>=2.0.0"
+    pip install "django>=3.0,<4.0"
+    pip install "django-timezone-field>=4.0,<5.0"
     # now make sure migrations still work backward and forward
     python manage.py migrate django_celery_beat
     python manage.py migrate django_celery_beat 0001
     python manage.py migrate django_celery_beat
 
 [testenv:apicheck]
-basepython = python3.5
+basepython = python3.6
 commands =
     sphinx-build -W -b apicheck -d {envtmpdir}/doctrees docs docs/_build/apicheck
 
 [testenv:linkcheck]
-basepython = python3.5
+basepython = python3.6
 commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
 [testenv:flake8]
-basepython = python3.5
+basepython = python3.6
 commands =
     python -m flake8 {toxinidir}/django_celery_beat {toxinidir}/t
 
-[testenv:flakeplus]
-# flakeplus is specifically to catch python2 things only
-basepython = python2.7
-commands =
-    flakeplus --2.7 {toxinidir}/django_celery_beat {toxinidir}/t
-
 [testenv:pydocstyle]
-basepython = python3.5
+basepython = python3.6
 commands =
     pydocstyle {toxinidir}/django_celery_beat
 
 [testenv:cov]
-basepython = python3.5
+basepython = python3.6
 usedevelop = true
 commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
-    pip install Django==2.2
+    pip install Django==3.0
     py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
