--- a/.travis.yml
+++ b/.travis.yml
@@ -13,39 +13,32 @@ before_install:
   - sudo apt install -y rabbitmq-server
   - sudo /etc/init.d/rabbitmq-server start
 python:
-  - 2.7
   - 3.5
   - 3.6
   - 3.7
-  - pypy
+  - 3.8
 # pypy3.5 not yet supported due to compilation errors with pyephem
 # https://github.com/celery/django-celery-beat/issues/245
 #  - pypy3.5
 env:
-  - DJANGO=1.11
-  - DJANGO=2.1
   - DJANGO=2.2
+  - DJANGO=3.0
 os:
   - linux
 matrix:
   include:
-    - { python: 2.7, env: TOXENV=upgradebeat111 }
-    - { python: 2.7, env: TOXENV=upgradebeat120 }
-    - { python: 3.5, env: TOXENV=upgradebeat130 }
-    - { python: 3.5, env: TOXENV=upgradebeat140 }
-    - { python: 3.5, env: TOXENV=flake8 }
-    - { python: 2.7, env: TOXENV=flakeplus }
-    - { python: 3.5, env: TOXENV=pydocstyle }
-    - { python: 3.5, env: TOXENV=cov }
+    - { python: 3.6, env: TOXENV=upgradebeat130 }
+    - { python: 3.6, env: TOXENV=upgradebeat140 }
+    - { python: 3.6, env: TOXENV=flake8 }
+    - { python: 3.6, env: TOXENV=pydocstyle }
+    - { python: 3.6, env: TOXENV=cov }
     # disabled temporarily due to upstream bug
     # https://github.com/celery/sphinx_celery/issues/9
     # - { python: 3.5, env: TOXENV=apicheck }
     # - { python: 3.5, env: TOXENV=linkcheck }
   exclude:
-    - { python: 2.7, env: DJANGO=2.1 }
-    - { python: 2.7, env: DJANGO=2.2 }
-    - { python: pypy, env: DJANGO=2.1 }
-    - { python: pypy, env: DJANGO=2.2 }
+    # Django 2.2 is the latest that supports Python 3.5
+    - { python: 3.5, env: DJANGO=3.0 }
 install: travis_retry pip install -U tox-travis
 services: rabbitmq
 script: tox -v -- -v
