--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,10 @@ services:
       - './django_celery_beat/:/app/django_celery_beat/'
 
   rabbit:
-      image: rabbitmq
-
+    image: rabbitmq
+    ports:
+        - "5672:5672"
   postgres:
     image: postgres
+    environment:
+        POSTGRES_PASSWORD: s3cr3t
